# Parser

./: .eslintrc.cjs  .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts
.github/workflows/: ci.yml  feature-build.yml
e2e/: visual.spec.ts
playwright-report/: index.html
rust/: Cargo.toml
rust/src/: csv_parser.rs  fin_parser.rs  lib.rs  types.rs  utils.rs  xml_parser.rs
src/: App.tsx  index.css  index.ts
src/components/Canvas/: EmptyState.tsx  ParserCanvas.tsx
src/components/Canvas/nodes/: FieldNode.tsx  HeaderNode.tsx  OutputNode.tsx  SourceNode.tsx  TransactionNode.tsx
src/components/Config/: ConfigPanel.tsx
src/components/Layout/: Header.tsx  MobileNav.tsx  Sidebar.tsx
src/components/Mapping/: MappingPanel.tsx
src/components/Preview/: DataPreview.tsx  VirtualizedTable.tsx
src/components/Progress/: ProgressBar.tsx
src/components/SampleSelector/: SampleSelector.tsx
src/data/: sampleData.ts
src/hooks/: useParser.ts  useSampleLoader.ts
src/parsers/: ParserService.ts  csvParser.ts  customParser.ts  finParser.ts  fixedWidthParser.ts  index.ts  iso20022Parser.ts
src/parsers/__tests__/: csvParser.test.ts  customParser.test.ts  finParser.test.ts  fixedWidthParser.test.ts  index.test.ts  iso20022Parser.test.ts
src/parsers/streaming/: csvStreamingParser.ts
src/parsers/utils/: encodingDetector.ts
src/store/: parserStore.ts
src/test/: setup.ts
src/types/: parser.ts
src/workers/: parserWorker.ts
test-results/: .last-run.json
