[package]
name = "parser-wasm"
version = "1.0.0"
authors = ["Visual Parser Team"]
edition = "2021"
description = "High-performance WASM parsers for CSV, XML, and financial message formats"
license = "MIT"
repository = "https://github.com/marcmassoteau-jpg/Parser"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
# WASM bindings
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"

# CSV parsing - zero-copy, streaming
csv = "1.3"

# XML parsing - SAX-style streaming
quick-xml = { version = "0.31", features = ["serialize"] }

# Memory efficiency
memchr = "2.7"
bstr = "1.9"

# Error handling
thiserror = "1.0"

# Date parsing
chrono = { version = "0.4", default-features = false, features = ["std"] }

# Regex for custom parsing
regex = "1.10"

# Lazy static for lookup tables
lazy_static = "1.4"

# Better panic messages in debug
console_error_panic_hook = { version = "0.1.7", optional = true }

# Performance timing
web-sys = { version = "0.3.69", features = ["Performance", "Window", "console"] }
js-sys = "0.3.69"

[dev-dependencies]
wasm-bindgen-test = "0.3.42"

[profile.release]
# Optimize for size and performance
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

# Strip debug info for smaller WASM
strip = true

[profile.dev]
# Faster dev builds
opt-level = 1
